@@ -65,7 +65,7 @@ scala/
 
 ## Requirements
 
-You'll need a Java SDK (6 or newer), Apache Ant (version 1.9.0 or above), and curl (for `./pull-binary-libs.sh`).
+You'll need a Java SDK (8 or newer), Apache Ant (version 1.9.3 or above), and curl (for `./pull-binary-libs.sh`).
 
 ## Git Hygiene
 
@@ -193,7 +193,7 @@ We typically alias `build/quick/bin/scalac -d sandbox` to `qsc` and `build/quick
 Note: on most machines this requires more heap than is allocated by default.  You can adjust the parameters with `ANT_OPTS`. Example command line:
 
 ```sh
-ANT_OPTS="-Xms512M -Xmx2048M -Xss1M -XX:MaxPermSize=128M" ant docs
+ANT_OPTS="-Xms512M -Xmx2048M -Xss1M" ant docs
 ```
 
 ### Bootstrapping concepts
